--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "todo-list-app",
   "version": "1.0.0",
   "description": "A modular todo list app with Webpack",
+  "homepage": "https://Thisaraiva.github.io/odin-todo-list",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --open",
     "build": "webpack",
     "lint": "eslint src/",
     "format": "prettier --write src/",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "date-fns": "^2.30.0"
@@ -19,6 +21,7 @@
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^9.9.1",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -31,7 +34,7 @@
   "overrides": {
     "rimraf": "^4.0.0",
     "glob": "^9.0.0"
-  },  
+  },
   "presets": [
     [
       "@babel/preset-env",
